testing/tests/ui/macro-args-with-type.stderr
error[E0308]: mismatched types
 --> tests/ui/macro-args-with-type.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ expected `&Option<u32>`, found `&{integer}`
  |
  = note: expected reference `&Option<u32>`
             found reference `&{integer}`
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/macro-args-with-type.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ expected `&Option<u32>`, found `&u32`
  |
  = note: expected reference `&Option<u32>`
             found reference `&u32`
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/macro-args-with-type.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^ expected `&Option<u32>`, found `&{integer}`
   |
   = note: expected reference `&Option<u32>`
              found reference `&{integer}`
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/macro-args-with-type.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^ expected `&Option<u32>`, found `&u32`
   |
   = note: expected reference `&Option<u32>`
              found reference `&u32`
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
